# mc-discord-bot

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  sync_tester.sh
commands/: __init__.py  alias.py  help.py  location.py  message.py  music.py  players.py  whitelist.py
